--- a/API/package.json
+++ b/API/package.json
@@ -16,6 +16,7 @@
     "mysql2": "^3.9.1",
     "sequelize": "^6.37.1",
     "swagger-jsdoc": "^6.2.8",
+    "swagger-themes": "^1.4.2",
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
